add more todo routes, writeRemote example and validation for zero.string
