# app/models/todo.model.go
@@ -5,16 +5,25 @@ import (
 	"github.com/TKSpectro/go-todo-api/config/database"
 	"github.com/TKSpectro/go-todo-api/utils"
 
+	"gopkg.in/guregu/null.v4/zero"
+
 	"gorm.io/gorm"
 )
 
 type Todo struct {
 	BaseModel
-	Title       string `gorm:"not null" json:"title" x-search:"true"`
-	Description string `gorm:"" json:"description" x-search:"true"`
+	Title       zero.String `gorm:"not null" json:"title" x-search:"true" swaggertype:"string" validate:"required,min=1"`
+	Description zero.String `gorm:"" json:"description" x-search:"true" swaggertype:"string"`
+	Completed   bool        `gorm:"default:false" json:"completed"`
 
-	AccountID int `gorm:"not null" json:"fkAccountId"`
+	AccountID uint `gorm:"not null" json:"fkAccountId"`
 	// Account   Account
+}
+
+func (todo *Todo) WriteRemote(remote interface{}) {
+	todo.Title = remote.(Todo).Title
+	todo.Description = remote.(Todo).Description
+	todo.Completed = remote.(Todo).Completed
 }
 
 func FindTodosByAccount(dest interface{}, meta *pagination.Meta, accountID uint) *gorm.DB {
@@ -25,10 +34,22 @@ func FindTodoByID(dest interface{}, id string, accountID uint) *gorm.DB {
 	return database.DB.Model(&Todo{}).Where("id = ? AND account_id = ?", id, accountID).Take(dest)
 }
 
+func CreateTodo(todo *Todo) *gorm.DB {
+	return database.DB.Create(todo)
+}
+
+func UpdateTodo(todo *Todo) *gorm.DB {
+	return database.DB.Save(todo)
+}
+
+func DeleteTodoByID(id string) *gorm.DB {
+	return database.DB.Delete(&Todo{}, id)
+}
+
 func CreateRandomTodo(accountID uint) *gorm.DB {
 	return database.DB.Create(&Todo{
-		Title:       utils.RandomString(10, ""),
-		Description: utils.RandomString(100, ""),
-		AccountID:   int(accountID),
+		Title:       zero.StringFrom(utils.RandomString(100, "")),
+		Description: zero.StringFrom(utils.RandomString(100, "")),
+		AccountID:   accountID,
 	})
 }
